<?xml version="1.0" encoding="utf-8" ?>
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    tools:context="se.puzzle.MainActivity"
    android:visibility="visible"
    android:background="#00A2E8">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zero"
        android:src="@drawable/zero"
        android:contentDescription="@string/zero"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/one"
        android:src="@drawable/one"
        android:contentDescription="@string/one"
        android:layout_alignTop="@+id/zero"
        android:layout_toRightOf="@+id/zero"
        android:layout_toEndOf="@+id/zero"
        android:layout_marginLeft="5dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/two"
        android:src="@drawable/two"
        android:contentDescription="@string/two"
        android:layout_alignTop="@+id/one"
        android:layout_toRightOf="@+id/one"
        android:layout_toEndOf="@+id/one"
        android:layout_marginLeft="5dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/three"
        android:src="@drawable/three"
        android:layout_below="@+id/zero"
        android:layout_alignLeft="@+id/zero"
        android:layout_alignStart="@+id/zero"
        android:contentDescription="@string/three"
        android:layout_marginTop="5dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/four"
        android:src="@drawable/four"
        android:layout_alignTop="@+id/three"
        android:layout_toRightOf="@+id/three"
        android:layout_toEndOf="@+id/three"
        android:contentDescription="@string/four"
        android:layout_marginLeft="5dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/five"
        android:src="@drawable/five"
        android:layout_alignTop="@+id/four"
        android:layout_toRightOf="@+id/four"
        android:layout_toEndOf="@+id/four"
        android:contentDescription="@string/five"
        android:layout_marginLeft="5dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/six"
        android:src="@drawable/six"
        android:layout_below="@+id/three"
        android:layout_alignLeft="@+id/three"
        android:layout_alignStart="@+id/three"
        android:contentDescription="@string/six"
        android:layout_marginTop="5dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seven"
        android:src="@drawable/seven"
        android:layout_alignTop="@+id/six"
        android:layout_toRightOf="@+id/six"
        android:layout_toEndOf="@+id/six"
        android:contentDescription="@string/seven"
        android:layout_marginLeft="5dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eight"
        android:src="@drawable/eight"
        android:layout_alignTop="@+id/seven"
        android:layout_toRightOf="@+id/seven"
        android:layout_toEndOf="@+id/seven"
        android:contentDescription="@string/eight"
        android:layout_marginLeft="5dp"/>

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/start"
        android:onClick="sort"
        android:background="#ffffff"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/eight"
        android:layout_toEndOf="@+id/eight"
        android:layout_marginLeft="10dp"

        android:visibility="gone"
        android:layout_below="@+id/eight"
        android:layout_marginTop="5dp"
        android:textColor="#00A2E8" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shuffle"
        android:id="@+id/shuffle"
        android:onClick="shuffle"
        android:background="#ffffff"
        android:clickable="false"
        android:textAlignment="center"
        android:textColor="#00A2E8"
        android:visibility="visible"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/eight"
        android:layout_alignEnd="@+id/eight"
        android:layout_below="@+id/eight"
        android:layout_marginTop="5dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/direction"
        android:src="@drawable/direction"
        android:contentDescription="direction"
        android:visibility="visible"
        android:layout_below="@+id/six"
        android:layout_alignLeft="@+id/six"
        android:layout_alignStart="@+id/six"
        android:layout_marginTop="60dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linlay"
        android:visibility="gone"
        android:layout_below="@+id/seven"
        android:layout_alignBottom="@+id/direction"
        android:layout_marginTop="60dp"
        android:layout_alignLeft="@+id/seven"
        android:layout_alignStart="@+id/seven"
        android:background="#00A2E8">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text=""
            android:typeface="sans"
            android:textColor="#ffffff"
            android:id="@+id/up"
            android:background="#00A2E8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text=""
            android:typeface="sans"
            android:textColor="#ffffff"
            android:id="@+id/right"
            android:background="#00A2E8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text=""
            android:typeface="sans"
            android:textColor="#ffffff"
            android:id="@+id/down"
            android:background="#00A2E8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text=""
            android:typeface="sans"
            android:textColor="#ffffff"
            android:id="@+id/left"
            android:background="#00A2E8" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finding"
        android:src="@drawable/fdsolution"
        android:contentDescription="@string/finding"
        android:visibility="gone"
        android:layout_marginTop="75dp"
        android:layout_below="@+id/six"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/solvable"
        android:src="@drawable/solvable"
        android:visibility="gone"
        android:layout_below="@+id/six"
        android:layout_alignLeft="@+id/six"
        android:layout_alignStart="@+id/six"
        android:layout_marginTop="75dp" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Play"
        android:id="@+id/play"
        android:onClick="Play"
        android:background="#ffffff"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/eight"
        android:layout_toEndOf="@+id/eight"
        android:layout_marginLeft="10dp"
        android:visibility="visible"
        android:layout_below="@+id/eight"
        android:layout_marginTop="5dp"
        android:textColor="#00A2E8" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Random"
        android:id="@+id/random"
        android:background="#ffffff"
        android:onClick="random"
        android:visibility="gone"
        android:layout_below="@+id/radiob"
        android:layout_alignLeft="@+id/six"
        android:layout_alignStart="@+id/six"
        android:textColor="#00A2E8" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="set"
        android:background="#ffffff"
        android:id="@+id/set"
        android:onClick="set"
        android:visibility="gone"
        android:layout_below="@+id/six"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/six"
        android:textColor="#00A2E8" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="182043765"
        android:id="@+id/edtext"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/random"
        android:layout_above="@+id/random"
        android:layout_marginBottom="15dp"
        android:background="#00A2E8" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notsolvable"
        android:src="@drawable/nsolvable"
        android:layout_below="@+id/six"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone"
        android:layout_marginTop="75dp" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeout"
        android:src="@drawable/timout"
        android:layout_below="@+id/six"
        android:layout_alignLeft="@+id/six"
        android:layout_alignStart="@+id/six"
        android:visibility="gone"
        android:layout_marginTop="75dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/complete"
        android:src="@drawable/complete"
        android:layout_below="@+id/six"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_alignLeft="@+id/six"
        android:layout_marginTop="75dp" />
    <RadioGroup
        android:id="@+id/radiob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/eight"
        android:layout_marginTop="90dp"
        android:layout_alignLeft="@+id/eight"
        android:visibility="gone"
        android:background="#00A2E8">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="Hamming"
            android:id="@+id/hamming"
            android:layout_alignBaseline="@+id/edtext"
            android:layout_alignBottom="@+id/edtext"
            android:layout_toRightOf="@+id/eight"
            android:layout_toEndOf="@+id/eight" />

        <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="Manhattan"
        android:checked="true"
        android:id="@+id/Manhattan"
            android:layout_alignBaseline="@+id/edtext"
            android:layout_alignBottom="@+id/edtext"
            android:layout_alignRight="@+id/hamming"
            android:layout_alignEnd="@+id/hamming" />
    </RadioGroup>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="previous"
        android:id="@+id/previous"
        android:src="@drawable/previous"
        android:onClick="previous"
        android:layout_below="@+id/shuffle"
        android:layout_alignLeft="@+id/shuffle"
        android:layout_alignStart="@+id/seven"
        android:layout_marginTop="175dp"
        android:visibility="visible" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next1"
        android:src="@drawable/next1"
        android:onClick="next"
        android:layout_below="@+id/eight"
        android:layout_marginTop="230dp"
        android:contentDescription="next1"
        android:layout_toRightOf="@+id/eight"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Large Text"
        android:id="@+id/text1"
        android:layout_alignBottom="@+id/two"
        android:layout_toRightOf="@+id/two"
        android:layout_marginLeft="15dp"
        android:background="#00A2E8"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="D = Distance"
        android:id="@+id/text2"
        android:layout_toRightOf="@+id/five"
        android:layout_below="@+id/text1"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:textColor="#ffffff"
        android:background="#00A2E8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="P = Priority"
        android:id="@+id/text3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/five"
        android:layout_below="@+id/text2"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:background="#00A2E8"
        android:textColor="#ffffff" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:max="3000"
        android:scrollbarSize="200dp"
        android:layout_below="@+id/eight"
        android:layout_marginTop="230dp"
        android:layout_alignLeft="@+id/six"
        android:layout_alignRight="@+id/eight"
        android:visibility="gone" />

</RelativeLayout>